First shot (working fine)

--- a/Close4RelaysWith2minDelay/Close4RelaysWith2minDelay.vcxproj.filters
+++ b/Close4RelaysWith2minDelay/Close4RelaysWith2minDelay.vcxproj.filters
@@ -17,5 +17,9 @@
   <ItemGroup>
     <None Include="Close4RelaysWith2minDelay.ino" />
   </ItemGroup>
- 
+  <ItemGroup>
+    <ClInclude Include="__vm\.Close4RelaysWith2minDelay.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
